# npu-proxy

./: .gitattributes  .gitignore  API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  CONVERTER_MODULE_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LICENSE  README.md  SPEC.md  TECH_DEBT_PLAN.md  npu_proxy.pyinstaller.spec  pyproject.toml  requirements-dev.txt  requirements.txt
.agents/skills/: README.md
docs/: BENCHMARKS.md  MODEL_DOWNLOAD.md  OLLAMA_COMPATIBILITY.md  README.md  STREAMING.md
docs/api/: EMBEDDINGS.md  OLLAMA_API.md  STREAMING.md
docs/development/: CONVERTER_API.md
docs/guides/: BENCHMARKS.md  MODEL_DOWNLOAD.md  NPU_BENCHMARK_RESULTS.md
docs/research/: FASTEMBED_OPTIMIZATION.md  IMPROVEMENT_RECOMMENDATIONS.md  OPENAI_OLLAMA_API_DESIGN.md  OPTIMIZATION_SUMMARY.md  PROMETHEUS_METRICS_PATTERNS.md  README.md  SSE_STREAMING_PATTERNS.md  TOKEN_COUNTING_ACCURACY.md  VLLM_OPENVINO_PATTERNS.md
examples/: rag_example.py
npu_proxy/: __init__.py  cli.py  config.py  hardware_certification.py  main.py  metrics.py
npu_proxy/api/: chat.py  embeddings.py  header_utils.py  health.py  models.py  (+2 more)
packaging/: npu-proxy.environment  npu-proxy.service
scripts/: benchmark.py  build_windows.ps1  certify_npu.py  download_model.py  install_linux.sh  ollama-launch-claude.ps1  ollama-launch-claude.sh  start-server.ps1  uninstall_linux.sh
tests/: conftest.py  test_api_embeddings.py  test_api_real_embedding.py  test_benchmark.py  test_certify_npu.py  test_chat.py  test_chat_routing.py  test_chat_templates.py  test_cli.py  test_config.py  test_context_router.py  test_converter.py  test_device_concurrency.py  test_device_fallback.py  test_device_selection.py  test_devices.py  test_download_script.py  test_downloader.py  test_e2e_behavior.py  test_embedding_engine.py  test_embeddings.py  test_engine_pool.py  test_engine_runtime.py  test_hardware_certification.py  test_health.py  test_integration_params.py  test_llm_runtime.py  test_mapper.py  test_metadata.py  test_metrics.py  test_model_scanning.py  test_models.py  test_ollama.py  test_ollama_defaults.py  test_ollama_embeddings.py  test_parameter_mapper.py  test_production_embedding.py  test_real_embeddings.py  test_real_routing.py  test_registry.py  (+9 more)
(+52 files in other folders)
