[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "npu-proxy"
version = "0.1.0"
description = "Ollama-compatible API proxy for Intel NPU inference via OpenVINO"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "openvino>=2025.0.0",
    "openvino-genai>=2025.0.0",
    "orjson>=3.9.0",
    "sse-starlette>=2.0.0",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[project.scripts]
npu-proxy = "npu_proxy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
