[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "npu-proxy"
version = "0.2.0"
description = "Ollama-compatible API proxy for Intel NPU inference via OpenVINO"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.1,<1.0.0",
    "uvicorn[standard]>=0.47.0,<1.0.0",
    "openvino>=2026.1.0,<2027.0.0",
    "openvino-genai>=2026.1.0.0,<2027.0.0",
    "openvino-tokenizers>=2026.1.0.0,<2027.0.0",
    "orjson>=3.11.9,<4.0.0",
    "sse-starlette>=3.4.4,<4.0.0",
    "pydantic>=2.13.4,<3.0.0",
    "httpx>=0.28.1,<1.0.0",
    "huggingface_hub>=0.36.0,<1.0.0",
    "optimum-intel[openvino]>=1.27.0,<2.0.0",
    "sentence-transformers>=5.5.1,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks full end-to-end behavioral tests",
]

[project.scripts]
npu-proxy = "npu_proxy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
